<resources>
    <string name="app_name">GardenNerds</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <string name="msg_first_name_empty">First Name can\&apos;t be empty!</string>
    <string name="msg_last_name_empty">Last Name can\&apos;t be empty!</string>
    <string name="msg_not_valid_username">Not a valid user name!</string>
    <string name="msg_enter_alpha_numeric">Enter only AlphaNumeric!</string>
    <string name="msg_space_not_allowed">Space not allowed!</string>
    <string name="msg_password_field_cant_be_empty">Password field can\&apos;t be empty!</string>
    <string name="msg_enter_min_5characters">"Enter minimum 5 Characters"</string>
    <string name="msg_enter_valid_email">"Enter valid email"</string>
    <string name="msg_passwords_are_same">"Password entered should not match"</string>
    <string name="msg_login_failed">Login Failed! Wrong User Name or Password.</string>
    <string name="msg_signup_failed">Sign Up Failed! Please try again.</string>
    <string name="msg_signup_success">Sign Up Successful! Please Login.</string>
    <string name="msg_app_exit">Do you want to Exit App?</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="request_message">Support Request Sent</string>
    <string name="about_text"> Discover about Garden Nerds, your one-stop shop for all things gardening. \n\nEstablished in 2024, we provide high-quality gardening supplies at reasonable costs. We want to make it easy for you to grow your garden with our wide selection and hassle-free buying process. \n\nBecome a member of our community now to up your gardening game!</string>

    <string name="product_image">image</string>

    <string name="screenshot">Screenshot</string>
    <string name="find_products">Find Products</string>
    <string name="update_address">Update Address</string>
    <string name="area_measured">Area Measured</string>
    <string name="available_sellers">Available Sellers</string>
    <string name="text_enter_plant_name">Enter Plant Name</string>
    <string name="text_enter_moisture_level">Enter Moisture Level (1 – 100) %</string>
    <string name="text_enter_temperature">Enter Temperature (1 – 50) °C</string>
    <string name="text_enter_watering_interval">Enter Watering Interval (1 – 30) days</string>
    <string name="text_enter_sunlight_preference">Sunlight Preference:</string>
    <string name="text_enter_sunlight_required">Sunlight Preference: (1 – 24) hours</string>
    <string name="text_enter_nutrition_required">Enter Nutrition Required</string>
    <string name="text_enter_reminder_time">Enter Reminder Time in HH:MM format</string>
    <string name="text_reminders">Reminders</string>
    <string name="text_enter_frequency">Enter Frequency (in days)</string>
    <string name="text_reminder_type_watering">Watering</string>
    <string name="text_reminder_type_fertilize">Fertilize</string>
    <string name="text_reminder_type_sunlight">Sunlight</string>
    <string name="text_reminder_type_changeSoil">Change Soil</string>
    <string name="text_indoor">Indoor</string>
    <string name="text_outdoor">Outdoor</string>

    //my_garden
    <string name="text_my_garden">My Garden</string>
    <string name="text_garden_Details">Garden Details</string>
    <string name="text_plant_details">Plant Details</string>
    <string name="text_no_gardens_added_yet">No gardens added yet.</string>
    <string name="text_add_garden">Add Garden</string>
    <string name="text_add_plant">Add Plant</string>
    <string name="text_my_plants">My Plants</string>
    <string name="text_no_plants_added_yet">No plants added yet.</string>
    <string name="text_add_reminder">Add Reminder</string>
    <string name="text_no_reminders_added_yet">No Reminders added yet.</string>
    <string name="text_scan_garden">Scan Garden</string>
    <string name="garden_nerds">Garden Nerds</string>
    <string name="gardening_smarter_growing_together">-Gardening Smarter, Growing Together-</string>
    <string name="bonanza_bundlegalore_s_booth">Bonanza - BundleGalore\'s Booth</string>
    <string name="price_613_79_19_99_shipping">Price: $613.79 + $19.99 shipping</string>
    <string name="buy_now">Buy Now</string>
    <string name="indoor_garden">Indoor Garden</string>
    <string name="reminder">Reminder</string>
    <string name="it_s_time_to_water_your_plant">It\'s time to water your plant.</string>
    <string name="snooze">Snooze</string>
    <string name="okay">Okay</string>
    <string name="loading_please_wait">Loading, please wait...</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="garden_photo">Garden Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="plant_type">Plant Type:</string>
    <string name="shady">Shady</string>
    <string name="partial_sunlight">Partial Sunlight</string>
    <string name="full_sunlight">Full Sunlight</string>
    <string name="garden_name">Garden Name</string>
    <string name="garden_description_goes_here">Garden Description goes here</string>
    <string name="sunlight_full_sunlight">Sunlight: Full Sunlight</string>
    <string name="watering_frequency_every_3_days">Watering Frequency: Every 3 days</string>
    <string name="moisture_level_50">Moisture Level: 50%</string>
    <string name="my_plants">My Plants</string>
    <string name="add_plant">Add Plant</string>
    <string name="no_plants_added_yet">No plants added yet.</string>
    <string name="search">Search</string>
    <string name="subscribe_to_premium">Subscribe to Premium</string>
    <string name="subscribe">Subscribe</string>
    <string name="measurement">Measurement</string>
    <string name="api_search">API Search</string>
    <string name="soil_sensor">Soil Sensor</string>
    <string name="no_gardens_added_yet">No gardens added yet.</string>
    <string name="plant_name">Plant Name</string>
    <string name="nutrient_level_15">Nutrient Level: 15%</string>
    <string name="plant_reminders">Plant Reminders</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="no_reminders_added_yet">No Reminders added yet.</string>
    <string name="sony_playstation_5_digital_edition">Sony PlayStation 5 - Digital Edition</string>
    <string name="_613_79">$613.79</string>
    <string name="rating_4_7">Rating: 4.7 ★</string>
    <string name="_17816_reviews">17816 Reviews</string>
    <string name="details">Details</string>
    <string name="highlights_lightning_speed_stunning_games">Highlights: Lightning Speed, Stunning Games...</string>
    <string name="related_products">Related Products</string>
    <string name="filters">Filters</string>
    <string name="admin">Admin</string>
    <string name="admin_gmail_com">admin@gmail.com</string>
    <string name="address">Address</string>
    <string name="_123_king_street">123 King Street</string>
    <string name="university_ave_east">University Ave. East</string>
    <string name="waterloo">Waterloo</string>
    <string name="n2n_0k9">N2N 0K9</string>
    <string name="ontario">Ontario</string>
    <string name="choose_plan">Choose Plan</string>
    <string name="easy_measurements_with_camera">Easy Measurements with Camera</string>
    <string name="customized_product_suggestions">Customized Product Suggestions</string>
    <string name="smart_reminders_notifications"><![CDATA[Smart Reminders & Notifications]]></string>
    <string name="personalized_garden">Personalized Garden</string>
    <string name="_12">$12</string>
    <string name="_1_month">1 Month</string>
    <string name="_100">$100</string>
    <string name="_1_year">1 Year</string>
    <string name="your_subscription_will_be_renew_at_the_end_of_every_billing_cycle_you_can_cancle_your_subscription_anytime_from_the_my_subscription_page_on_garden_nerds_app">Your subscription will be renew at the end of every billing cycle.You can cancle your subscription anytime from the My Subscription page on Garden Nerds App.</string>
    <string name="your_reviews_or_queries_here">Your Reviews or Queries Here</string>
    <string name="area_0_sq_ft">Area: 0 sq ft</string>
    <string name="_0_c">0°C</string>
    <string name="plant_sunlight">Plant Sunlight</string>
    <string name="plant_watering">Plant Watering</string>
    <string name="reminder_icon">Reminder Icon</string>
    <string name="reminder_message">Reminder message</string>
    <string name="date_and_time">Date and Time</string>
    <string name="usename">Usename</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="update">Update</string>


    <string-array name="canadian_provinces">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Northwest Territories</item>
        <item>Nunavut</item>
        <item>Yukon</item>
    </string-array>

    <string-array name="reminder_type">
        <item>Watering</item>
        <item>Fertilize</item>
        <item>Sunlight</item>
        <item>Change Soil</item>
    </string-array>
</resources>