<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SupportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent"
            app:errorTextAppearance="@style/error_appearance">

            <EditText
                android:id="@+id/supportName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@fonts/roboto_light"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent"
            app:errorTextAppearance="@style/error_appearance">

            <EditText
                android:id="@+id/supportEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@fonts/roboto_light"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Your Reviews or Queries Here"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent"
            app:errorTextAppearance="@style/error_appearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/issueText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="10"
                android:minLines="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/supportBtn"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:fontFamily="@fonts/roboto_light"
            android:text="@string/submit"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>